--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -1145,7 +1145,7 @@
     "                    top=0.9, \n",
     "                    wspace=0.3, \n",
     "                    hspace=0.35)\n",
-    "plt.savefig(outDir+'picture\\\\f71popenetgy.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.savefig(outDir+'Fig4.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -1303,7 +1303,7 @@
     "                    top=0.9, \n",
     "                    wspace=0.25, \n",
     "                    hspace=0.35)\n",
-    "plt.savefig(outDir+\"picture\\\\f8ExcIonRad.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
+    "plt.savefig(outDir+\"Fig5.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
    ]
   },
   {
