--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "dir='D:\\\\dataofpro\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\PMD\\\\t3\\\\'\n",
-    "# dir='D:\\\\doc\\\\data\\\\ion1test\\\\wingener1\\\\'"
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\twopumpdelay42\\\\'"
    ]
   },
   {
@@ -2464,12 +2464,26 @@
     "        x=data[:,0]\n",
     "        y=data[:,1]\n",
     "        z=data[:,2]\n",
+    "        z2=data[:,3]\n",
+    "        z3=data[:,4]\n",
     "        points=(x,y,z)\n",
     "        \n",
-    "        ax=plt.figure().add_subplot(projection='polar')\n",
-    "        #fig=plt.subplots(2,2)\n",
+    "        # ax=plt.figure().add_subplot(projection='polar')\n",
+    "        plt.subplot(221)\n",
     "        #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
-    "        ax.scatter(y,x,s=z)\n",
+    "        plt.tricontourf(y,x,z)\n",
+    "        plt.title('$t$ = '+dat_list[i][-10:-6]+' fs',loc='left')\n",
+    "        plt.ylabel(\"$\\\\mathrm{cos}\\\\,\\\\theta$\")\n",
+    "        plt.xlabel(\"$P$ (a.u.)\")\n",
+    "        plt.subplot(222)\n",
+    "        #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
+    "        plt.tricontourf(y,x,z2)\n",
+    "        plt.title('$t$ = '+dat_list[i][-10:-6]+' fs',loc='left')\n",
+    "        plt.ylabel(\"$\\\\mathrm{cos}\\\\,\\\\theta$\")\n",
+    "        plt.xlabel(\"$P$ (a.u.)\")\n",
+    "        plt.subplot(223)\n",
+    "        #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
+    "        plt.tricontourf(y,x,z3,cmap='jet')\n",
     "        plt.title('$t$ = '+dat_list[i][-10:-6]+' fs',loc='left')\n",
     "        plt.ylabel(\"$\\\\mathrm{cos}\\\\,\\\\theta$\")\n",
     "        plt.xlabel(\"$P$ (a.u.)\")\n",
@@ -2523,7 +2537,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gif_name = \"PMD.gif\"\n",
+    "fileList =os.listdir(dir+\"PMD\\\\\")\n",
+    "# print(fileList)\n",
+    "image_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"PMD\\\\\"+str(fileList[i])\n",
+    "    if s[-5:]==\".jpeg\":\n",
+    "        image_list.append(s)\n",
+    "n=len(image_list)\n",
+    "# # print(image_list)\n",
+    "# myduration=0.2\n",
+    "# # eval(input(\"duration: s\"))\n",
+    "# compose_gif(image_list,dir+gif_name,myduration)\n",
+    "# # import imageio\n",
+    "# # with imageio.get_writer(dir+gif_name, mode='I') as writer:\n",
+    "# #     for filename in image_list:\n",
+    "# #         image = imageio.imread(filename)\n",
+    "# #         writer.append_data(image)\n",
+    "# # print(\"Created\")   \n",
+    "if n:\n",
+    "    print(image_list)\n",
+    "    myduration=0.2#eval(input(\"duration: s\"))\n",
+    "    compose_gif(image_list,dir+gif_name,myduration)\n",
+    "    print(\"Created\")   "
+   ]
   }
  ],
  "metadata": {
