--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -1312,64 +1312,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*3)))\n",
-    "intDir=\"D:\\\\doc\\\\data\\\\twopumponeprobe\\\\2062130\\\\\"\n",
-    "ax=plt.axes([0.05,0.65,0.950,0.25])\n",
-    "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
-    "np.savetxt(outDir+\"data\\\\f9(1).dat\",data,fmt=\"%.9f\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$R$ (a.u.)\")\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(pad=0.05,\n",
-    "             fraction=0.15,\n",
-    "             aspect=10,\n",
-    "             format='%3.2f')\n",
-    "setlabelm(ax,'(a)',[-0.1,1.001])\n",
-    "# plt.xlim(0,150)\n",
-    "plt.ylim(min(y),10)\n",
-    "ax=plt.axes([0.05,0.35,0.950,0.25])\n",
-    "data=np.loadtxt(intDir+'ktot.dat')\n",
-    "np.savetxt(outDir+\"data\\\\f9(2).dat\",data,fmt=\"%.9f\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z1=data[:,2]\n",
-    "z2=data[:,3]\n",
-    "z3=data[:,4]\n",
-    "z4=z1+z2+z3\n",
+    "# fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*3)))\n",
+    "# intDir=\"D:\\\\doc\\\\data\\\\twopumponeprobe\\\\2062130\\\\\"\n",
+    "# ax=plt.axes([0.05,0.65,0.950,0.25])\n",
+    "# data=np.loadtxt(intDir+\"excradwave.dat\")\n",
+    "# np.savetxt(outDir+\"data\\\\f9(1).dat\",data,fmt=\"%.9f\")\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z=data[:,2]\n",
+    "# plt.xlabel(\"Time (fs)\")\n",
+    "# plt.ylabel(\"$R$ (a.u.)\")\n",
+    "# plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# plt.colorbar(pad=0.05,\n",
+    "#              fraction=0.15,\n",
+    "#              aspect=10,\n",
+    "#              format='%3.2f')\n",
+    "# setlabelm(ax,'(a)',[-0.1,1.001])\n",
+    "# # plt.xlim(0,150)\n",
+    "# plt.ylim(min(y),10)\n",
+    "# ax=plt.axes([0.05,0.35,0.950,0.25])\n",
+    "# data=np.loadtxt(intDir+'ktot.dat')\n",
+    "# np.savetxt(outDir+\"data\\\\f9(2).dat\",data,fmt=\"%.9f\")\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,1]\n",
+    "# z1=data[:,2]\n",
+    "# z2=data[:,3]\n",
+    "# z3=data[:,4]\n",
+    "# z4=z1+z2+z3\n",
     "\n",
-    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "plt.colorbar(pad=0.05,\n",
-    "             fraction=0.15,\n",
-    "             aspect=10,\n",
-    "             format='%3.2f')\n",
-    "setlabelm(ax,'(b)',[-0.1,1.001])\n",
-    "plt.xlabel('Time (fs)')\n",
-    "plt.ylabel('Momentum (arb.units)')\n",
+    "# plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "# plt.colorbar(pad=0.05,\n",
+    "#              fraction=0.15,\n",
+    "#              aspect=10,\n",
+    "#              format='%3.2f')\n",
+    "# setlabelm(ax,'(b)',[-0.1,1.001])\n",
+    "# plt.xlabel('Time (fs)')\n",
+    "# plt.ylabel('Momentum (arb.units)')\n",
     "\n",
-    "ax=plt.axes([0.05,0.05,0.76,0.25])\n",
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\2060\\\\eneTRJVexc.dat')\n",
-    "np.savetxt(outDir+\"data\\\\f9(3).dat\",data,fmt=\"%.9f\")\n",
-    "t = data[:,0]\n",
-    "population_by_continent = {\n",
-    "    'Translation': data[:,1],\n",
-    "    'Rotation':    data[:,2],\n",
-    "    'Vibration':   data[:,3],\n",
-    "}\n",
-    "ax.stackplot(t, population_by_continent.values(),\n",
-    "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc='best',fontsize=6)\n",
-    "#ax.set_title('World population')\n",
-    "ax.set_xlabel('Time (fs)')\n",
-    "ax.set_ylabel('Energy (a.u.)')\n",
-    "# plt.colorbar(pad=0.01,visible=False)\n",
-    "plt.xlim(min(t),max(t))\n",
-    "plt.ylim(-0.01,0.07)\n",
-    "setlabelm(ax,'(c)',[-0.1,1.001])\n",
+    "# ax=plt.axes([0.05,0.05,0.76,0.25])\n",
+    "# data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\2060\\\\eneTRJVexc.dat')\n",
+    "# np.savetxt(outDir+\"data\\\\f9(3).dat\",data,fmt=\"%.9f\")\n",
+    "# t = data[:,0]\n",
+    "# population_by_continent = {\n",
+    "#     'Translation': data[:,1],\n",
+    "#     'Rotation':    data[:,2],\n",
+    "#     'Vibration':   data[:,3],\n",
+    "# }\n",
+    "# ax.stackplot(t, population_by_continent.values(),\n",
+    "#              labels=population_by_continent.keys(), alpha=1)\n",
+    "# ax.legend(loc='best',fontsize=6)\n",
+    "# #ax.set_title('World population')\n",
+    "# ax.set_xlabel('Time (fs)')\n",
+    "# ax.set_ylabel('Energy (a.u.)')\n",
+    "# # plt.colorbar(pad=0.01,visible=False)\n",
+    "# plt.xlim(min(t),max(t))\n",
+    "# plt.ylim(-0.01,0.07)\n",
+    "# setlabelm(ax,'(c)',[-0.1,1.001])\n",
     "\n",
-    "plt.savefig(outDir+'picture\\\\f9pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "# plt.savefig(outDir+'picture\\\\f9pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
