--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -558,7 +558,7 @@
     "    tp[1].append(max(y3))\n",
     "    p.append(max(y3))\n",
     "plt.plot(tp[0],tp[1],'k-',marker='o',markerfacecolor='r',markersize='3')\n",
-    "plt.xlabel('$t_{pa}$ (fs)')\n",
+    "plt.xlabel('$t_{\\\\rm pa}$ (fs)')\n",
     "plt.ylabel('Ionization probability')\n",
     "plt.ylim(-0.17,1.05)\n",
     "plt.savefig('D:\\\\doc\\\\data\\\\ion\\\\picture\\\\f6pop.'+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
@@ -2191,7 +2191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
