--- a/Python/LAMAO.ipynb
+++ b/Python/LAMAO.ipynb
@@ -53,7 +53,7 @@
     "    # 'weight': \"bold\",\n",
     "    # }\n",
     "    label_legend = ax.legend(handles=[line],\n",
-    "                             loc=[0.8,0.8],\n",
+    "                             loc=[0.85,0.85],\n",
     "                             handlelength=0.0,\n",
     "                             handleheight=0.0,\n",
     "                             handletextpad=0.0,\n",
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\test\\\\11140937\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ori\\\\h2o\\\\202212050048\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "# f=open(dir+\"alog.txt\",encoding=\"utf-8\")\n",
@@ -172,7 +172,7 @@
     "plt.xlim(TimeBegin,TimeEnd)\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$E(t)$ (a.u.)')\n",
-    "plt.savefig(dir+'pluse'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
+    "# plt.savefig(dir+'pluse'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -188,7 +188,7 @@
     "plt.plot(t,v,'k-')\n",
     "plt.xlabel('Time ('+timeUnit+')')\n",
     "plt.ylabel('$\\\\langle J\\\\rangle$')\n",
-    "plt.savefig(dir+'J'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
+    "# plt.savefig(dir+'J'+figureType,bbox_inches='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -209,6 +209,8 @@
     "    v=data[:,1]\n",
     "    plt.plot(t,v,'k-')\n",
     "    plt.xlim(TimeBegin,TimeEnd)\n",
+    "    dv=max(v)-min(v)\n",
+    "    plt.ylim(min(v)-0.2*dv,max(v)+0.2*dv)\n",
     "    plt.xlabel('Time ('+timeUnit+')')\n",
     "    plt.ylabel('$\\\\langle \\\\mathrm{cos} \\\\theta \\\\rangle _{Zz}$')\n",
     "file=dir+'cos2Zz.dat'\n",
@@ -221,6 +223,8 @@
     "    v=data[:,1]\n",
     "    plt.plot(t,v,'k-')\n",
     "    plt.xlim(TimeBegin,TimeEnd)\n",
+    "    dv=max(v)-min(v)\n",
+    "    plt.ylim(min(v)-0.2*dv,max(v)+0.2*dv)\n",
     "    plt.xlabel('Time ('+timeUnit+')')\n",
     "    plt.ylabel('$\\\\langle \\\\mathrm{cos}^2 \\\\theta \\\\rangle _{Zz}$')\n",
     "file=dir+'cos2Xx.dat'\n",
@@ -233,6 +237,8 @@
     "    v=data[:,1]\n",
     "    plt.plot(t,v,'k-')\n",
     "    plt.xlim(0,5)\n",
+    "    dv=max(v)-min(v)\n",
+    "    plt.ylim(min(v)-0.2*dv,max(v)+0.2*dv)\n",
     "    plt.xlabel('Time ('+timeUnit+')')\n",
     "    plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Xx}$')\n",
     "file=dir+'cos2Yy.dat'\n",
@@ -240,11 +246,13 @@
     "    i=i+1\n",
     "    ax=plt.subplot(2,2,i)\n",
     "    setlabel(ax,'(d)')\n",
-    "    data=np.loadtxt()\n",
+    "    data=np.loadtxt(file)\n",
     "    t=data[:,0]\n",
     "    v=data[:,1]\n",
     "    plt.plot(t,v,'k-')\n",
     "    plt.xlim(TimeBegin,TimeEnd)\n",
+    "    dv=max(v)-min(v)\n",
+    "    plt.ylim(min(v)-0.2*dv,max(v)+0.2*dv)\n",
     "    plt.xlabel('Time ('+timeUnit+')')\n",
     "    plt.ylabel('$\\\\langle \\\\mathrm{cos} ^2\\\\theta \\\\rangle _{Yy}$')\n",
     "plt.savefig(dir+'coss.'+figureType,dpi=figureDPI)"
@@ -256,44 +264,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib.ticker import MaxNLocator\n",
-    "data=np.loadtxt(dir+\"js.dat\")\n",
-    "x=data[:,0]\n",
-    "y=data[:,1]\n",
-    "z=data[:,2]\n",
-    "ny=int((max(y)-min(y))/(y[1]-y[0]))+1\n",
-    "print(ny)\n",
-    "nx=int((max(x)-min(x))/(x[ny]-x[0]))-1\n",
-    "zMesh=np.zeros((ny,nx))\n",
-    "len1=len(z)\n",
-    "for i in range(1,nx):\n",
-    "    tot=0\n",
-    "    for j in range(1,ny):\n",
-    "        if ((i-1)*ny+j-1)<len1:\n",
-    "            zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
-    "            tot=tot+z[(i-1)*ny+j-1]\n",
-    "    print(tot)\n",
-    "# print('nx= ',nx,' ny= ',ny)\n",
-    "# print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
-    "# print('x[50]',x[50])\n",
-    "# print(x[0])\n",
-    "# print(zMesh)\n",
-    "xMesh=np.linspace(min(x),max(x),nx)\n",
-    "yMesh=np.linspace(min(y),max(y),ny)\n",
-    "#xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
-    "ax1=plt.gca()\n",
-    "plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
-    "ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
-    "# plt.xlim(0.9005,1.05)\n",
-    "plt.xlim(TimeBegin,TimeEnd)\n",
-    "# plt.ylim(-0.5,19.5)\n",
-    "plt.xlabel('$t$ (ps)')\n",
-    "plt.ylabel('$J$')\n",
-    "# plt.title(\"Ground state, $t$ = \"+fileList1[ii][11:17]+\" fs\",loc='left')\n",
-    "plt.colorbar(format=cbformat)\n",
-    "plt.savefig(dir+\"p_j.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "os.startfile(dir+\"p_J.\"+figureType)"
+    "file=dir+\"js.dat\"\n",
+    "if fee(file):\n",
+    "    from matplotlib.ticker import MaxNLocator\n",
+    "    data=np.loadtxt(dir+\"js.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y=data[:,1]\n",
+    "    z=data[:,2]\n",
+    "    ny=int((max(y)-min(y))/(y[1]-y[0]))+1\n",
+    "    print(ny)\n",
+    "    nx=int((max(x)-min(x))/(x[ny]-x[0]))-1\n",
+    "    zMesh=np.zeros((ny,nx))\n",
+    "    len1=len(z)\n",
+    "    for i in range(1,nx):\n",
+    "        tot=0\n",
+    "        for j in range(1,ny):\n",
+    "            if ((i-1)*ny+j-1)<len1:\n",
+    "                zMesh[j-1,i-1]=z[(i-1)*ny+j-1]\n",
+    "                tot=tot+z[(i-1)*ny+j-1]\n",
+    "        print(tot)\n",
+    "    # print('nx= ',nx,' ny= ',ny)\n",
+    "    # print('xMax= ',max(x),' xMin= ',min(x),' yMax= ',max(y),' yMin= ',min(y))\n",
+    "    # print('x[50]',x[50])\n",
+    "    # print(x[0])\n",
+    "    # print(zMesh)\n",
+    "    xMesh=np.linspace(min(x),max(x),nx)\n",
+    "    yMesh=np.linspace(min(y),max(y),ny)\n",
+    "    #xx,yy,zz=np.meshgrid(xMesh,yMesh,zMesh)\n",
+    "    ax1=plt.gca()\n",
+    "    plt.pcolormesh(xMesh,yMesh,zMesh,cmap='jet')\n",
+    "    ax1.xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    ax1.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "    # plt.xlim(0.9005,1.05)\n",
+    "    plt.xlim(TimeBegin,TimeEnd)\n",
+    "    # plt.ylim(-0.5,19.5)\n",
+    "    plt.xlabel('$t$ (ps)')\n",
+    "    plt.ylabel('$J$')\n",
+    "    # plt.title(\"Ground state, $t$ = \"+fileList1[ii][11:17]+\" fs\",loc='left')\n",
+    "    plt.colorbar(format=cbformat)\n",
+    "    plt.savefig(dir+\"p_j.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "    os.startfile(dir+\"p_J.\"+figureType)"
    ]
   },
   {
@@ -334,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.startfile(dir)"
+    "# os.startfile(dir)"
    ]
   },
   {
@@ -431,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
