--- a/Python/NStateRJPlot.ipynb
+++ b/Python/NStateRJPlot.ipynb
@@ -222,6 +222,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fil=dir+'potential1.dat'\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,\"$R$ (a.u.)\",\"Energy (a.u.)\",dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil=dir+'per_dipole1.dat'\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,\"$R$ (a.u.)\",\"Energy (D)\",dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fil=dir+\"qr1.dat\"\n",
     "if fee(fil):\n",
     "    xyplot(fil,'$R$','Intensity (a.u.) ',dir)"
@@ -319,6 +341,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "xyplot(dir+'population\\\\state1_s1_v00_j00_pm00pop.dat','Time (fs)','Population',dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def quickSort(arr, left=None, right=None):\n",
     "    left = 0 if not isinstance(left,(int, float)) else left\n",
     "    right = len(arr)-1 if not isinstance(right,(int, float)) else right\n",
@@ -367,7 +398,7 @@
     "    plt.xlabel('$\\\\theta$')\n",
     "    # plt.ylabel(\"Population\")\n",
     "    plt.ylim(min(p)-0.5,max(p)+0.5)\n",
-    "    plt.savefig(dir+\"time_wavepacket_distribution\\\\\"+str(i),dpi=600)\n",
+    "    plt.savefig(dir+\"time_wavepacket_distribution\\\\\"+plotList[i][-11:-4]+figureType,dpi=600)\n",
     "    plt.show()\n",
     "    plt.close()"
    ]
@@ -406,12 +437,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat=np.loadtxt(dir+'Time_Wavepacket_Distribution\\\\state01_v00_J00_PM00_WAVEPACKET_POLAR_rot_3.550ps.dat')\n",
-    "fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
-    "x=dat[:,0]/180*np.pi\n",
-    "y=dat[:,1]\n",
-    "plt.plot(x,y)\n",
-    "plt.ylim(0,1)"
+    "# dat=np.loadtxt(dir+'Time_Wavepacket_Distribution\\\\state01_v00_J00_PM00_WAVEPACKET_POLAR_rot_3.550ps.dat')\n",
+    "# fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
+    "# x=dat[:,0]/180*np.pi\n",
+    "# y=dat[:,1]\n",
+    "# plt.plot(x,y)\n",
+    "# plt.ylim(0,1)"
    ]
   },
   {
@@ -437,10 +468,10 @@
     "    plt.plot(a,p)\n",
     "    dy=max(p)-min(p)\n",
     "    dx=max(a)-min(a)\n",
-    "    plt.xlabel('$t$ (fs)')\n",
-    "    plt.ylabel(\"$\\\\langle \\\\mathrm{cos^2}\\\\theta\\\\rangle$\")\n",
+    "    # plt.xlabel('$t$ (fs)')\n",
+    "    # plt.ylabel(\"$\\\\langle \\\\mathrm{cos^2}\\\\theta\\\\rangle$\")\n",
     "    plt.ylim(min(p)-0.1*dy,max(p)+0.1*dy)\n",
-    "    plt.\n",
+    "    \n",
     "    plt.savefig(subdir+str(i),dpi=600)\n",
     "    plt.show()\n",
     "    plt.close()"
