--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -204,6 +204,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "def plot_x2y(x, label_x,y1,label_y1, y2,label_y2):\n",
+    "    fig, ax1 = plt.subplots()\n",
+    "    color = 'tab:red'\n",
+    "    ax1.set_xlabel(label_x)\n",
+    "    ax1.set_ylabel(label_y1, color=color)\n",
+    "    ax1.plot(x, y1, color=color)\n",
+    "    sciforyax(ax1)\n",
+    "    ax1.tick_params(axis='y', labelcolor=color)\n",
+    "    ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
+    "    color = 'tab:blue'\n",
+    "    ax2.set_ylabel(label_y2, color=color)  # we already handled the x-label with ax1\n",
+    "    ax2.plot(x, y2,'--', color=color)\n",
+    "    ax2.tick_params(axis='y', labelcolor=color)\n",
+    "    sciforyax(ax2)\n",
+    "    fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
+    "    \n",
+    "file=dir+'ori_ali_1.dat'\n",
+    "if fee(file):\n",
+    "    data=np.loadtxt(dir+\"ori_ali_1.dat\")\n",
+    "    x=data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    plot_x2y(x,'Time ('+timeUnit+')', y1,'$\\\\langle{\\\\rm cos\\\\, } \\\\theta \\\\rangle$',y2,'$\\\\langle {\\\\rm cos^2} \\\\theta \\\\rangle$')\n",
+    "    plt.savefig(dir+\"GroundAlignmentAndOrientation.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if fee(dir+\"alog.md\"):\n",
     "    print(fee)\n",
     "    f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
