--- a/Python/NStateRJPlot.ipynb
+++ b/Python/NStateRJPlot.ipynb
@@ -233,6 +233,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fil=dir+'potential2.dat'\n",
+    "if fee(fil):\n",
+    "    xyplot(fil,\"$R$ (a.u.)\",\"Energy (a.u.)\",dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fil1=dir+'potential1.dat'\n",
+    "fil2=dir+'potential2.dat'\n",
+    "if fee(fil1)&fee(fil2):\n",
+    "    dat1=np.loadtxt(fil1)\n",
+    "    print(min(dat1[:,1]))\n",
+    "    dat2=np.loadtxt(fil2)\n",
+    "    print(min(dat2[:,1]))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fil=dir+'per_dipole1.dat'\n",
     "if fee(fil):\n",
     "    xyplot(fil,\"$R$ (a.u.)\",\"Energy (D)\",dir)"
@@ -423,12 +450,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat=np.loadtxt(dir+'Time_Wavepacket_Distribution\\\\state01_v00_J00_PM00_WAVEPACKET_POLAR_rot_final.dat')\n",
-    "fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
-    "x=dat[:,0]/180*np.pi\n",
-    "y=dat[:,1]\n",
-    "plt.plot(x,y)\n",
-    "plt.ylim(0,1)"
+    "fil=dir+'Time_Wavepacket_Distribution\\\\state01_v00_J00_PM00_WAVEPACKET_POLAR_rot_final.dat'\n",
+    "if fee(fil):\n",
+    "    dat=np.loadtxt(fil)\n",
+    "    fig, ax = plt.subplots(subplot_kw={'projection': 'polar'})\n",
+    "    x=dat[:,0]/180*np.pi\n",
+    "    y=dat[:,1]\n",
+    "    plt.plot(x,y)\n",
+    "    plt.ylim(0,1)"
    ]
   },
   {
@@ -483,19 +512,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat=np.loadtxt('D:\\\\dataofpro\\\\TimFreDis1.dat')\n",
-    "x=dat[:,0]\n",
-    "y=dat[:,1]\n",
-    "z=dat[:,2]\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')"
+    "fil='D:\\\\dataofpro\\\\TimFreDis1.dat'\n",
+    "if fee(fil):\n",
+    "    dat=np.loadtxt(fil)\n",
+    "    x=dat[:,0]\n",
+    "    y=dat[:,1]\n",
+    "    z=dat[:,2]\n",
+    "    plt.tricontourf(x,y,z,levels,cmap='jet')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -514,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
