--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -9,7 +9,8 @@
     "dir='D:\\\\dataofpro\\\\output\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\PMD\\\\t3\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\twopumpdelay42\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\twocolor\\\\v2j1\\\\output\\\\'"
+    "# dir='D:\\\\doc\\\\data\\\\twocolor\\\\v2j1\\\\output\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\'"
    ]
   },
   {
@@ -2371,7 +2372,7 @@
     "            z3=data[:,4]\n",
     "            z4=z1+z2+z3\n",
     "\n",
-    "            plt.figure(figsize=(16/2.54,12.5/2.54))\n",
+    "            plt.figure(figsize=(16/2.54,16/2.54))\n",
     "            \n",
     "            #fig=plt.subplots(2,2)\n",
     "            #fig.title(\"$t$ = \"+fileList[i][11:13]+\" fs\")\n",
@@ -2379,45 +2380,51 @@
     "            plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
     "            plt.xlim(-11,11)\n",
     "            plt.ylim(-11,11)\n",
-    "            plt.xlabel(\"$R$ (a.u.)\")\n",
-    "            plt.ylabel(\"$R$ (a.u.)\")\n",
-    "            setlabel(ax,\"(a)\")\n",
-    "            plt.colorbar(format=cbformat)\n",
+    "            # plt.xlabel(\"$R$ (a.u.)\")\n",
+    "            # plt.ylabel(\"$R$ (a.u.)\")\n",
+    "            plt.xticks([])\n",
+    "            plt.yticks([])\n",
+    "            # setlabelm(ax,\"(a)\",[-0.15,1.0005])\n",
+    "            # plt.colorbar(format=cbformat)\n",
     "            \n",
     "            ax=plt.subplot(2,2,2)\n",
     "            plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "            setlabel(ax,\"(b)\")\n",
-    "            plt.colorbar(format=cbformat)\n",
+    "            # setlabelm(ax,\"(b)\",[-0.15,1.0005])\n",
+    "            # plt.colorbar(format=cbformat)\n",
     "            plt.xlim(-11,11)\n",
     "            plt.ylim(-11,11)\n",
-    "            plt.xlabel(\"$R$ (a.u.)\")\n",
-    "            plt.ylabel(\"$R$ (a.u.)\")\n",
-    "\n",
+    "            # plt.xlabel(\"$R$ (a.u.)\")\n",
+    "            # plt.ylabel(\"$R$ (a.u.)\")\n",
+    "            plt.xticks([])\n",
+    "            plt.yticks([])\n",
     "            ax=plt.subplot(2,2,3)\n",
     "            plt.tricontourf(x,y,z3,levels,cmap='jet')\n",
-    "            setlabel(ax,\"(c)\")\n",
-    "            plt.colorbar(format=cbformat)\n",
+    "            # setlabelm(ax,\"(c)\",[-0.15,1.0005])\n",
+    "            # plt.colorbar(format=cbformat)\n",
     "            plt.xlim(-11,11)\n",
     "            plt.ylim(-11,11)\n",
-    "            plt.xlabel(\"$R$ (a.u.)\")\n",
-    "            plt.ylabel(\"$R$ (a.u.)\")\n",
-    "            \n",
+    "            # plt.xlabel(\"$R$ (a.u.)\")\n",
+    "            # plt.ylabel(\"$R$ (a.u.)\")\n",
+    "            plt.xticks([])\n",
+    "            plt.yticks([])\n",
     "            ax=plt.subplot(2,2,4)\n",
     "            plt.tricontourf(x,y,z4,levels,cmap='jet')\n",
-    "            setlabel(ax,\"(d)\")\n",
-    "            plt.colorbar(format=cbformat)\n",
+    "            # setlabelm(ax,\"(d)\",[-0.15,1.0005])\n",
+    "            # plt.colorbar(format=cbformat)\n",
     "            plt.xlim(-11,11)\n",
     "            plt.ylim(-11,11)\n",
-    "            plt.xlabel(\"$R$ (a.u.)\")\n",
-    "            plt.ylabel(\"$R$ (a.u.)\")\n",
-    "            \n",
-    "            plt.subplots_adjust(left=0.125,\n",
+    "            # plt.xlabel(\"$R$ (a.u.)\")\n",
+    "            # plt.ylabel(\"$R$ (a.u.)\")\n",
+    "            plt.xticks([])\n",
+    "            plt.yticks([])\n",
+    "            plt.subplots_adjust(left=0.45,\n",
     "                                bottom=0.1, \n",
     "                                right=0.9, \n",
-    "                                top=0.9, \n",
-    "                                wspace=0.3, \n",
-    "                                hspace=0.3)\n",
-    "            plt.savefig(dir+\"wave\\\\\"+fileList[i][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "                                top=0.55, \n",
+    "                                wspace=0.15, \n",
+    "                                hspace=0.15)\n",
+    "            plt.savefig(dir+\"wave\\\\\"+fileList[i][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=100)\n",
+    "            plt.close()\n",
     "            # plt.show()\n",
     "    "
    ]
@@ -2442,9 +2449,50 @@
     "if n:       \n",
     "            \n",
     "    print(image_list)\n",
-    "    myduration=0.3#eval(input(\"duration: s\"))\n",
+    "    myduration=0.15#eval(input(\"duration: s\"))\n",
     "    compose_gif(image_list,dir+gif_name,myduration)\n",
     "    print(\"Created\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fileList =os.listdir(dir+\"wave\\\\\")\n",
+    "print(fileList)\n",
+    "dat_list=list()\n",
+    "print(\"Checking image list\")\n",
+    "n=len(fileList)\n",
+    "for i in range(n):\n",
+    "    s=dir+\"wave\\\\\"+str(fileList[i])\n",
+    "    if s[-4:]==\".dat\":\n",
+    "        dat_list.append(s)\n",
+    "n=len(dat_list)\n",
+    "if n:        \n",
+    "    for i in range(n):\n",
+    "        if fee(dat_list[i]):\n",
+    "            data=np.loadtxt(dat_list[i])\n",
+    "            x=data[:,0]\n",
+    "            y=data[:,1]\n",
+    "            z1=data[:,2]/60\n",
+    "            plt.figure(figsize=(16/2/2.54,16/2/2.54))\n",
+    "            plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "            plt.xlim(-11,11)\n",
+    "            plt.ylim(-11,11)\n",
+    "            plt.xlabel(\"$R$ (a.u.)\")\n",
+    "            plt.ylabel(\"$R$ (a.u.)\")\n",
+    "            plt.colorbar(format=cbformat)\n",
+    "            plt.subplots_adjust(left=0.15,\n",
+    "                                bottom=0.15, \n",
+    "                                right=0.9, \n",
+    "                                top=0.9, \n",
+    "                                wspace=0.1, \n",
+    "                                hspace=0.1)\n",
+    "            plt.savefig(dir+\"wave\\\\\"+fileList[i][:16]+\".\"+figureType,bbox_inches = 'tight',dpi=200)\n",
+    "            plt.close()\n",
+    "            # plt.show()"
    ]
   },
   {
@@ -2659,7 +2707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
