--- a/Python/OriPaperPlot.ipynb
+++ b/Python/OriPaperPlot.ipynb
@@ -147,7 +147,7 @@
     "        \n",
     "\n",
     "levels=100\n",
-    "figureDPI=1200\n",
+    "figureDPI=600\n",
     "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\""
    ]
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "plt.figure(figsize=(8/2.54,6.5*2/2.54))\n",
+    "plt.figure(figsize=(8*2/2.54,6.5*2/2.54))\n",
     "ax1=plt.subplot(2,1,1)\n",
     "data=np.loadtxt('F:\\\\doc\\\\ori1\\\\oneHCP\\\\temprature\\\\0\\\\laser.dat')\n",
     "np.savetxt(dir+\"f1laer.dat\",data)\n",
@@ -180,7 +180,7 @@
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('$E(t)$ (V/m)')\n",
     "plt.xlim(-1500,7500)\n",
-    "setlabel(ax1,'(a)')\n",
+    "setlabelm(ax1,'(a)',[0.92,0.85])\n",
     "sciforyax(ax1)\n",
     "ax2=plt.subplot(2,1,2)\n",
     "data=np.loadtxt('F:\\\\doc\\\\ori1\\\\oneHCP\\\\temprature\\\\0\\\\p_veq0.dat')\n",
@@ -195,8 +195,8 @@
     "y6=data[:,6]\n",
     "plt.plot(x,y1,x,y2,x,y3,x,y4,x,y5,x,y6)\n",
     "# plt.text(-0.1,1,\"(b)\")\n",
-    "setlabel(ax2, '(b)')\n",
-    "plt.legend(['$|0,0\\\\rangle$','$|0,1\\\\rangle$','$|0,2\\\\rangle$','$|0,3\\\\rangle$','$|0,4\\\\rangle$','$|0,5\\\\rangle$','$|0,6\\\\rangle$'],loc=(0.5,0.7),ncol=2)\n",
+    "setlabelm(ax2, '(b)',[0.92,0.85])\n",
+    "plt.legend(['$|0,0\\\\rangle$','$|0,1\\\\rangle$','$|0,2\\\\rangle$','$|0,3\\\\rangle$','$|0,4\\\\rangle$','$|0,5\\\\rangle$','$|0,6\\\\rangle$'],loc=(0.25,0.7),ncol=6)\n",
     "plt.xlim(-1500,7500)\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('Population')\n",
