--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -10,7 +10,7 @@
     "# dir='D:\\\\doc\\\\data\\\\PMD\\\\t3\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\twopumpdelay42\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\twocolor\\\\v2j1\\\\output\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\'"
+    "# dir='D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\'"
    ]
   },
   {
@@ -205,7 +205,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def plot_x2y(x, label_x,y1,label_y1, y2,label_y2):\n",
     "    fig, ax1 = plt.subplots()\n",
     "    color = 'tab:red'\n",
@@ -220,9 +219,16 @@
     "    ax2.plot(x, y2,'--', color=color)\n",
     "    ax2.tick_params(axis='y', labelcolor=color)\n",
     "    sciforyax(ax2)\n",
-    "    fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
-    "    \n",
-    "file=dir+'ori_ali_1.dat'\n",
+    "    fig.tight_layout()  # otherwise the right y-label is slightly clipped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " file=dir+'ori_ali_1.dat'\n",
     "if fee(file):\n",
     "    data=np.loadtxt(dir+\"ori_ali_1.dat\")\n",
     "    x=data[:,0]\n",
@@ -318,7 +324,7 @@
     "    z=dat[:,2]\n",
     "    plt.plot(x,z)\n",
     "    sciforyax(ax)\n",
-    "    plt.xlim(7500,15000)\n",
+    "    # plt.xlim(7500,15000)\n",
     "    plt.xlabel(\"$t$ (fs)\")\n",
     "    plt.ylabel(\"$E(t)$ (V/m)\")\n",
     "    plt.savefig(dir+'laser2.'+figureType,dpi=600)"
@@ -339,7 +345,7 @@
     "    z=dat[:,2]\n",
     "    plt.plot(x,y)\n",
     "    # sciforyax(ax)\n",
-    "    plt.xlim(7500,15000)\n",
+    "    # plt.xlim(7500,15000)\n",
     "    plt.xlabel(\"$t$ (fs)\")\n",
     "    plt.ylabel(\"$\\\\langle \\mathrm{cos}\\\\theta\\\\rangle$\")\n",
     "    plt.savefig(dir+'cos1.'+figureType,dpi=600)"
@@ -1552,7 +1558,7 @@
     "    #ax.set_title('World population')\n",
     "    plt.xlabel('Time (fs)')\n",
     "    plt.ylabel('Energy (a.u.)')\n",
-    "plt.savefig(outDir+'EnergyRJV.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.savefig(dir+'EnergyRJV.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -2327,7 +2333,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "fileList =os.listdir(dir+\"p_vgr_vj\\\\\")\n",
     "# print(fileList)\n",
     "image_list=list()\n",
@@ -2707,12 +2712,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
