--- a/Python/PAPlot.ipynb
+++ b/Python/PAPlot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\dataofpro\\\\OutPut1\\\\'"
+    "dir='D:\\\\dataofpro\\\\OutPut\\\\'"
    ]
   },
   {
@@ -158,6 +158,10 @@
    "outputs": [],
    "source": [
     "data=np.loadtxt(dir+'VGR_X.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(x,y)\n",
+    "data=np.loadtxt(dir+'VE_X.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(x,y)"
@@ -368,7 +372,7 @@
     "        z=dat[:,3]\n",
     "        plt.plot(x,z)\n",
     "        plt.show()\n",
-    "        plt.close()"
+    "        # plt.close()"
    ]
   },
   {
@@ -376,7 +380,84 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fildir=dir+'eig_fun0\\\\'\n",
+    "datlist=os.listdir(fildir)\n",
+    "n=len(datlist)\n",
+    "print(datlist)\n",
+    "lis=list()\n",
+    "if n:\n",
+    "    for i in range(n):\n",
+    "        s=fildir+str(datlist[i])\n",
+    "        print(s)\n",
+    "        if s[-4:]==\".dat\":\n",
+    "            lis.append(s)\n",
+    "    n=len(lis)\n",
+    "    for i in range(n):\n",
+    "        dat=np.loadtxt(lis[i])\n",
+    "        x=dat[:,0]\n",
+    "        y=dat[:,1]\n",
+    "        plt.plot(x,y)\n",
+    "        plt.show()\n",
+    "        plt.close()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fildir=dir+'eig_fun1\\\\'\n",
+    "datlist=os.listdir(fildir)\n",
+    "n=len(datlist)\n",
+    "print(datlist)\n",
+    "lis=list()\n",
+    "if n:\n",
+    "    for i in range(n):\n",
+    "        s=fildir+str(datlist[i])\n",
+    "        print(s)\n",
+    "        if s[-4:]==\".dat\":\n",
+    "            lis.append(s)\n",
+    "    n=len(lis)\n",
+    "    for i in range(n):\n",
+    "        dat=np.loadtxt(lis[i])\n",
+    "        x=dat[:,0]\n",
+    "        y=dat[:,1]\n",
+    "        plt.plot(x,y)\n",
+    "        plt.show()\n",
+    "        plt.close()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fildir=dir+'eig_fun\\\\'\n",
+    "datlist=os.listdir(fildir)\n",
+    "n=len(datlist)\n",
+    "print(datlist)\n",
+    "lis=list()\n",
+    "if n:\n",
+    "    for i in range(n):\n",
+    "        s=fildir+str(datlist[i])\n",
+    "        print(s)\n",
+    "        if s[-4:]==\".dat\":\n",
+    "            lis.append(s)\n",
+    "    n=len(lis)\n",
+    "    for i in range(n):\n",
+    "        dat=np.loadtxt(lis[i])\n",
+    "        x=dat[:,0]\n",
+    "        y=dat[:,1]\n",
+    "        plt.plot(x,y)\n",
+    "        plt.show()\n",
+    "        plt.close()\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
@@ -395,12 +476,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
