--- a/Python/mplot.ipynb
+++ b/Python/mplot.ipynb
@@ -108,10 +108,17 @@
     "    def _set_format(self, vmin=None, vmax=None):\n",
     "        self.format = self.fformat\n",
     "        if self._useMathText:\n",
-    "             self.format = r'$\\mathdefault{%s}$' % self.format\n",
-    "\n",
+    "             self.format = r'$\\mathdefault{%s}$' % self.format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "levels=100\n",
-    "figureDPI=1200\n",
+    "figureDPI=600\n",
     "figureType=\"jpeg\"\n",
     "timeUnit=\"fs\""
    ]
@@ -153,6 +160,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data=np.loadtxt(dir+\"gaussianpulse.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "ax=plt.gca()\n",
+    "plt.plot(x,y)\n",
+    "# plt.xlim(0,5)\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "sciforyax(ax)\n",
+    "plt.savefig(dir+\"pulse1.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# %%\n",
     "plt.figure(figsize=(8,6))\n",
     "data=np.loadtxt(dir+\"ori+ali.dat\")\n",
@@ -163,7 +188,7 @@
     "fig, ax1 = plt.subplots()\n",
     "\n",
     "color = 'tab:red'\n",
-    "ax1.set_xlabel('Time (fs)')\n",
+    "ax1.set_xlabel('Time (ps)')\n",
     "ax1.set_ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$', color=color)\n",
     "ax1.plot(x, y1, color=color)\n",
     "ax1.tick_params(axis='y', labelcolor=color)\n",
@@ -176,7 +201,7 @@
     "ax2.tick_params(axis='y', labelcolor=color)\n",
     "\n",
     "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
-    "plt.savefig(dir+\"AlignmentAndOrientation.jpeg\",bbox_inches = 'tight',dpi=600)\n",
+    "plt.savefig(dir+\"cos.\",bbox_inches = 'tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -189,13 +214,17 @@
     "data =np.loadtxt(dir+\"pop_j_t.dat\")\n",
     "t=data[:,0]\n",
     "legend=[]\n",
-    "linsty=[\"k-\",\"r--\",\"b-.\",\"g:\",\"k--\"]\n",
+    "linsty=[\"-\",\"--\",\"-.\",\":\"]\n",
     "colsty=[\"k\",\"r\",\"b\",\"g\"]\n",
-    "for i in range(1,5):\n",
+    "for i in range(1,data.shape[1]):\n",
     "    p=data[:,i]\n",
-    "    plt.plot(t,p,linsty[i])\n",
+    "    j=i%4\n",
+    "    plt.plot(t,p,linsty[j])\n",
     "    legend.append(\"$J=$ \"+str(i-1))\n",
-    "plt.legend(legend)"
+    "plt.legend(legend)\n",
+    "plt.xlabel(\"Time (ps)\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "plt.savefig(dir+\"pop_j_t.\"+figureType,dpi=figureDPI)"
    ]
   },
   {
@@ -227,11 +256,11 @@
     "# setlabel(ax1,\"(a)\")\n",
     "# plt.xlim(x[0]/2,max(x)-x[0])\n",
     "plt.ylim(0.5,11.5)\n",
-    "plt.xlim(min(x),5)\n",
+    "# plt.xlim(min(x),5)\n",
     "plt.xlabel('Time (ps)')\n",
     "plt.ylabel('$J$')\n",
     "plt.colorbar(format=cbformat)\n",
-    "plt.savefig(dir+\"pop_j_.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "plt.savefig(dir+\"phase.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -240,46 +269,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "legend=[]\n",
-    "linsty=[\"k-\",\"r--\",\"b-.\",\"g:\",\"k--\"]\n",
-    "colsty=[\"k\",\"r\",\"b\",\"g\"]\n",
-    "data1=np.loadtxt(dir+'population_4.dat')\n",
-    "data2=np.loadtxt(dir+'population_8.dat')\n",
-    "data3=np.loadtxt(dir+'population_12.dat')\n",
-    "plt.figure(figsize=(cm2inch(8*3),cm2inch(6.5)))\n",
-    "ax=plt.subplot(1,3,1)\n",
-    "t=data1[:,0] \n",
-    "n=0\n",
-    "for i in range(0,data1.shape[1]-1):\n",
-    "    while n == len(linsty):\n",
-    "        n=n-len(linsty)\n",
-    "    plt.plot(t,data1[:,i+1],linsty[n])\n",
-    "    n=n+1\n",
+    "# legend=[]\n",
+    "# linsty=[\"k-\",\"r--\",\"b-.\",\"g:\",\"k--\"]\n",
+    "# colsty=[\"k\",\"r\",\"b\",\"g\"]\n",
+    "# data1=np.loadtxt(dir+'population_4.dat')\n",
+    "# data2=np.loadtxt(dir+'population_8.dat')\n",
+    "# data3=np.loadtxt(dir+'population_12.dat')\n",
+    "# plt.figure(figsize=(cm2inch(8*3),cm2inch(6.5)))\n",
+    "# ax=plt.subplot(1,3,1)\n",
+    "# t=data1[:,0] \n",
+    "# n=0\n",
+    "# for i in range(0,data1.shape[1]-1):\n",
+    "#     while n == len(linsty):\n",
+    "#         n=n-len(linsty)\n",
+    "#     plt.plot(t,data1[:,i+1],linsty[n])\n",
+    "#     n=n+1\n",
     "    \n",
-    "    legend.append(\"$J=$\"+str(i))\n",
-    "plt.legend(legend,ncol=3)\n",
+    "#     legend.append(\"$J=$\"+str(i))\n",
+    "# plt.legend(legend,ncol=3)\n",
     "\n",
-    "legend=[]\n",
-    "n=0\n",
-    "ax=plt.subplot(1,3,2)\n",
-    "for i in range(0,data2.shape[1]-1):\n",
-    "    while n == len(linsty):\n",
-    "        n=n-len(linsty)\n",
-    "    plt.plot(t,data2[:,i+1],linsty[n])\n",
-    "    n=n+1\n",
-    "    legend.append(\"$J=$\"+str(i+5))\n",
-    "ax.legend(legend)\n",
+    "# legend=[]\n",
+    "# n=0\n",
+    "# ax=plt.subplot(1,3,2)\n",
+    "# for i in range(0,data2.shape[1]-1):\n",
+    "#     while n == len(linsty):\n",
+    "#         n=n-len(linsty)\n",
+    "#     plt.plot(t,data2[:,i+1],linsty[n])\n",
+    "#     n=n+1\n",
+    "#     legend.append(\"$J=$\"+str(i+5))\n",
+    "# ax.legend(legend)\n",
     "\n",
-    "legend=[]\n",
-    "ax=plt.subplot(1,3,3)\n",
-    "for i in range(0,data3.shape[1]-1):\n",
-    "    while n == len(linsty):\n",
-    "        n=n-len(linsty)\n",
-    "    plt.plot(t,data3[:,i+1],linsty[n])\n",
-    "    n=n+1\n",
-    "    legend.append(\"$J=$\"+str(i+9))\n",
-    "ax.legend(legend)\n",
-    "plt.savefig(dir+\"pop_js.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+    "# legend=[]\n",
+    "# ax=plt.subplot(1,3,3)\n",
+    "# for i in range(0,data3.shape[1]-1):\n",
+    "#     while n == len(linsty):\n",
+    "#         n=n-len(linsty)\n",
+    "#     plt.plot(t,data3[:,i+1],linsty[n])\n",
+    "#     n=n+1\n",
+    "#     legend.append(\"$J=$\"+str(i+9))\n",
+    "# ax.legend(legend)\n",
+    "# plt.savefig(dir+\"pop_js.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -306,12 +335,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0 (tags/v3.9.0:9cf6752, Oct  5 2020, 15:34:40) [MSC v.1927 64 bit (AMD64)]"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8a5edab282632443219e051e4ade2d1d5bbc671c781051bf1437897cbdfea0f1"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
